ensured the planned shift duration must be > 0

--- a/apps/frontend/components/Button/Button.module.css
+++ b/apps/frontend/components/Button/Button.module.css
@@ -12,6 +12,11 @@
     box-sizing: border-box;
 }
 
+.button:disabled {
+    opacity: .5;
+    cursor: unset;
+}
+
 .button_elevated {
     box-shadow: var(--box-shadow);
 }
